- Scrollbar: fixed a codepath leading to a divide-by-zero (which would not be
  noticeable by user but detected by sanitizers). (#9089) [@judicaelclair]
- InvisibleButton: allow calling with size (0,0) to fit to available content 
  size. (#9166, #7623)
- Added GetItemFlags() in public API for consistency and to expose generic
  flags of last submitted item. (#9127)
- Shortcuts:
  - IsItemHovered() without ImGuiHoveredFlags_AllowWhenBlockedByActiveItem
    doesn't filter out the signal when activated item is a shortcut remote activation;
    (which mimicks what's done internally in the ItemHoverable() function). (#9138)
  - Fixed tooltip placement being affected for a frame when located over an item
    activated by SetNextItemShortcut(). (#9138)
- Error Handling:
  - Improve error handling and recovery for EndMenu()/EndCombo(). (#1651, #9165, #8499)
- Debug Tools:
  - Debug Log: fixed incorrectly printing characters in IO log when submitting
    non-ASCII values to io.AddInputCharacter(). (#9099)
  - Debug Log: can output to debugger on Windows. (#5855)
- Backends:
  - GLFW: Avoid repeated glfwSetCursor()/glfwSetInputMode() calls when unnecessary.
    Lowers overhead for very high framerates (e.g. 10k+ FPS). [@maxliani]
  - GLFW: Added IMGUI_IMPL_GLFW_DISABLE_X11 / IMGUI_IMPL_GLFW_DISABLE_WAYLAND to
    forcefully disable either. (#9109, #9116)
  - OpenGL3: Fixed embedded loader multiple init/shutdown cycles broken on some
    platforms. (#8792, #9112)
  - SDL_GPU3: macOS version can use MSL shaders in order to support macOS 10.14+
    (vs Metallib shaders requiring macOS 14+). Requires application calling
    SDL_CreateGPUDevice() with SDL_GPU_SHADERFORMAT_MSL. (#9076) [@Niminem]
  - Vulkan: helper for creating a swapchain (used by examples and multi-viewports)
    selects `VkSwapchainCreateInfoKHR`'s `compositeAlpha` value based on
    `cap.supportedCompositeAlpha`, which seems to be required on some Android
     devices. (#8784) [@FelixStach]